Estructura mes venuts + detalls

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>frontend</title>
+    <link rel="icon" type="image/png" href="https://static.wixstatic.com/media/2cd43b_2d38ec22e6d1492e88eb9a559865c0b6~mv2_d_1500_1500_s_2.png/v1/fill/w_375,h_375,fp_0.50_0.50/2cd43b_2d38ec22e6d1492e88eb9a559865c0b6~mv2_d_1500_1500_s_2.png"/>
+    <title>BookShelter</title>
   </head>
   <body>
     <div id="app"></div>
